Fix the modal text size on small screen overflowing the content

--- a/bigbluebutton-html5/imports/ui/components/modal/fullscreen/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/modal/fullscreen/styles.scss
@@ -33,6 +33,10 @@
   flex: 1;
   margin: 0;
   font-weight: 400;
+
+  @include mq($small-only) {
+    font-size: x-large;
+  }
 }
 
 %btn {
